[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Fire_Tile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/Firepit.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 30, 30 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Inactive",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Active",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16.3602, 16.0268 )

[node name="Fire_Tile" type="Area2D" groups=[
"Enemy",
]]
scale = Vector2( 0.9, 0.9 )
input_pickable = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Inactive"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Start_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Move_Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Fire_Tile_body_entered"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
[connection signal="timeout" from="Move_Timer" to="." method="_on_Move_Timer_timeout"]
